<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home_registered"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.yureka.technology.ytc.ui.home.homefragments.FragmentHome"
        tools:layout="@layout/fragment_home"
        android:label="@string/title_home" >
        <action
            android:id="@+id/action_navigation_home_to_materiActivity"
            app:destination="@id/nav_course_flow" />
    </fragment>
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.yureka.technology.ytc.ui.home.homefragments.FragmentPeringkat"
        tools:layout="@layout/fragment_peringkat"
        android:label="@string/title_dashboard" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.yureka.technology.ytc.ui.home.homefragments.FragmentAvatar"
        tools:layout="@layout/fragment_avatar"
        android:label="@string/title_notifications" />
    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.yureka.technology.ytc.ui.home.profileregistered.RegisteredProfileFragment"
        android:label="@string/title_profil" />
    <include app:graph="@navigation/nav_course_flow" />


</navigation>