<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.yureka.technology.ytc.ui.profile.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSnow">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/ToolbarColoredBackArrow"
                app:titleTextColor="@color/colorOnPrimary">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/tv_label_forgot_password"
            android:textColor="@color/colorLabelAccount"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_label_forgot">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_label_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/tv_forgot_email"
                android:textColor="@color/colorLabelAccount"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:background="@drawable/rounded_sign_in_error"
                android:drawableRight="@drawable/ic_wrong_input"
                android:hint="@string/ed_forgot_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_15sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_label_notValid_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5sp"
                android:text="@string/tv_signIn_notValid_email"
                android:textColor="@color/colorBackgroundAccountDanger"
                android:textSize="14sp"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_selanjutnya_forgot"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:backgroundTint="@color/colorPrimary"
            app:cardCornerRadius="24dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_selanjutnya_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/tv_signIn_selanjutnya"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>