<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme"
                tools:ignore="MissingConstraints">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:theme="@style/AppTheme.ToolbarFont"
                    app:titleTextColor="@color/colorOnPrimary">

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/ll_edit_profile_decs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSnow"
                android:orientation="vertical"
                android:weightSum="1"
                app:layout_constraintTop_toBottomOf="@id/appbar">

                <LinearLayout
                    android:id="@+id/ll_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/appbar">

                    <TextView
                        android:id="@+id/tv_label_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="5sp"
                        android:text="@string/tv_edit_profile_name"
                        android:textColor="@color/colorLabelAccount"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/ed_name_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/rounded_edit_profile"
                        android:hint="@string/ed_edit_profile_name"
                        android:inputType="text"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/ll_name_edit">

                    <TextView
                        android:id="@+id/tv_label_email_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="5sp"
                        android:text="@string/tv_edit_profile_email"
                        android:textColor="@color/colorLabelAccount"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/ed_email_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/rounded_edit_profile"
                        android:hint="@string/ed_edit_profile_email"
                        android:inputType="textEmailAddress"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/ll_email_edit">

                    <TextView
                        android:id="@+id/tv_label_password_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="5sp"
                        android:text="@string/tv_edit_profile_password"
                        android:textColor="@color/colorLabelAccount"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/ed_password_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/rounded_edit_profile"
                        android:inputType="textPassword"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_phone_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/ll_password_edit">

                    <TextView
                        android:id="@+id/tv_label_phone_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_semibold"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="5sp"
                        android:text="@string/tv_edit_profile_phone"
                        android:textColor="@color/colorLabelAccount"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/ed_phone_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:background="@drawable/rounded_edit_profile"
                        android:hint="@string/ed_edit_profile_phone"
                        android:inputType="text"
                        android:paddingHorizontal="15dp"
                        android:paddingVertical="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_weight="0.4"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btn_save_edit"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/colorButtonDisabled"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="2dp">

                        <TextView
                            android:id="@+id/tv_save_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/nunito_regular"
                            android:text="@string/tv_edit_profile_save"
                            android:textAlignment="center"
                            android:textColor="@color/colorgreyPractice2"
                            android:textSize="16sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>