<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.yureka.technology.ytc.ui.home.homefragments.FragmentProfilViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSnow">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:theme="@style/AppTheme.ToolbarFont"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:titleTextColor="@color/colorOnPrimary">

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <LinearLayout
                android:id="@+id/container_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ic_photo_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/images_desc"
                    android:src="@drawable/ic_profile_holder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_msg"
                    android:textSize="16sp"
                    app:layout_constraintLeft_toRightOf="@id/ic_photo_placeholder"
                    app:layout_constraintRight_toRightOf="parent" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_margin="24dp"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/register"
                android:onClick="@{() -> viewModel.openFeatureRegistEventClick()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_info" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_rectangle_border"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:onClick="@{() -> viewModel.openFeatureSigninEventClick()}"
                app:layout_constraintRight_toLeftOf="@id/btn_register"
                app:layout_constraintTop_toBottomOf="@id/container_info"
                app:layout_constraintTop_toTopOf="@id/btn_register" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/btn_term"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/rounded_rectangle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/container_profile">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/images_desc"
                android:src="@drawable/ic_term" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/term"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/images_desc"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_faq"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:background="@drawable/rounded_rectangle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_term">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/images_desc"
                android:src="@drawable/ic_faq" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/faq"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/images_desc"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>